@@ -1776,15 +1776,18 @@ public class TownCommand extends BaseCommand implements CommandExecutor, TabComp
 					return;
 				} else {
 					String line = StringMgmt.join(StringMgmt.remFirstArg(split), " ");
-
-					if (!NameValidation.isValidString(line)) {
-						TownyMessaging.sendErrorMsg(player, Translation.of("msg_err_invalid_string_board_not_set"));
-						return;
-					}
-					// TownyFormatter shouldn't be given any string longer than 159, or it has trouble splitting lines.
-					if (line.length() > 159)
-						line = line.substring(0, 159);
-
+					
+					if (!line.equals("none")) {
+						if (!NameValidation.isValidString(line)) {
+							TownyMessaging.sendErrorMsg(player, Translation.of("msg_err_invalid_string_board_not_set"));
+							return;
+						}
+						// TownyFormatter shouldn't be given any string longer than 159, or it has trouble splitting lines.
+						if (line.length() > 159)
+							line = line.substring(0, 159);
+					} else 
+						line = "";
+					
 					town.setBoard(line);
 					TownyMessaging.sendTownBoard(player, town);
 				}
