@@ -5029,3 +5029,8 @@ v0.92.0.11:
     - Default: -1.0
     - The maximum price that bonus townblocks can cost to purchase. Set to -1.0 to deactivate this maxium.
     - Closes #3788.
+  - Fix /nation status screen never showing the nation board.
+  - New Commands: /town set board none & /nation set board none.
+    - Sets an empty board message.
+    - Empty board messages are not shown on login and do not appear on the /town and /nation status screens.
+    - Closes #4322.
